# dida-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  RELEASE.md  ROADMAP.md  SECURITY.md  SESSION_LOG.md  go.mod  install.ps1  install.sh  说明.md
.github/: dependabot.yml  pull_request_template.md
crates/dida-http/: Cargo.toml
crates/dida-http/src/: checksum.rs  client.rs  download.rs  error.rs  lib.rs  mcp.rs  openapi.rs  policy.rs  transport.rs  upgrade.rs  webapi.rs
crates/dida-http/tests/: client_tests.rs
docs/: README.md  agent-usage.md  api-coverage.md  attachment-download.md  commands.md  distribution.md  handoff.md  index.html  llm-quickstart.md  openapi-setup.md  openapi-setup.zh-CN.md  quickstart.md  quickstart.zh-CN.md  rust-architecture.md  rust-migration.md  skill-installation.md  web-api.md
npm/: README.md  package.json
packaging/: README.md
scripts/: check-private-state.sh  check-private-state.test.sh  compat-test.ps1  export-package-manager-repos.sh  export-package-manager-repos.test.sh  generate-release-notes.sh  generate-release-notes.test.sh  package-manager-smoke-preflight.sh  package-manager-smoke-preflight.test.sh  update-packaging-templates.sh  update-packaging-templates.test.sh  validate-actions-pinned.sh  validate-actions-pinned.test.sh  validate-changelog.sh  validate-changelog.test.sh  validate-npm-package.sh  validate-npm-package.test.sh  validate-packaging.sh  validate-packaging.test.sh  validate-release-metadata.sh  validate-release-strategy.sh  (+14 more)
(+170 files in other folders)
