[workspace]
members = [
  "crates/dida-core",
  "crates/dida-http",
  "crates/dida-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/DeliciousBuding/dida-cli"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
